--- a/BEZAOPay/App.config
+++ b/BEZAOPay/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="BEZAOConnect" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BEZAOPay;Integrated Security=True;"/>
+		<add name="BEZAOConnect" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;User id=DESKTOP-AFVTNCM\Kachi;Initial Catalog=BEZAOPay;Integrated Security=True;"/>
 	</connectionStrings>
 	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
